2005-03-30  Martin Hunt  <hunt@redhat.com>

	* scbuf.c:  Make functions use per-cpu buffers as documented.
	_stp_scbuf_clear(): Now returns a pointer to the buffer.

	